# CheapWhisper

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c
app/src/main/java/com/example/smartnotetaker/: FallbackEngine.kt  LocalModelDownloader.kt  MainActivity.kt  SettingsActivity.kt  VoiceKeyboardService.kt  WavRecorder.kt
app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt
app/src/main/res/drawable/: bg_mic_button.xml  ic_backspace.xml  ic_keyboard_hide.xml  ic_mic.xml  ic_settings.xml
app/src/main/res/layout/: keyboard_view.xml
app/src/main/res/xml/: method.xml
